--- a/master.css
+++ b/master.css
@@ -41,5 +41,11 @@
     font-family: "Impact";
     color: red;
 }
-
-
+.word {
+    color: red;
+ }
+ 
+ .word:hover, .word.selected {
+     color: blue;
+     cursor: pointer;
+ }
