--- a/podcastreact/legacyfiles/master.css
+++ b/podcastreact/legacyfiles/master.css
@@ -8,6 +8,11 @@
 .banner img {
     width: 100%;
     justify-content: center;
+    z-index: 0;
+}
+
+.banner p{
+    z-index: 1;
 }
 
 .banner audio{
@@ -31,16 +36,42 @@
 
 }
 
+.body .audioBlock p{
+    color:white;
+}
+
+
+
+
+
 .separator {
     background-color: white;
     width: 100%;
     height: 10%;
     /* background-image: url("/Users/flyingtopher/Desktop/Code Citadel/School/3. PSYC 2288 Podcast/Podcast/assets/images/separator Image.png"); */
-    text-align: center;
+    /* text-align: center; */
     font-size:40px;
     font-family: "Impact";
     color: red;
 }
+
+.separator .menu{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.separator .menu button {
+    background-color: white;
+    /* background-image: url("/Users/flyingtopher/Desktop/Code Citadel/School/3. PSYC 2288 Podcast/Podcast/assets/images/separator Image.png"); */
+    text-align: center;
+    font-size:40px;
+    font-family: "Impact";
+    color: red;
+    border-color: transparent;
+    border-bottom-color: black;
+    
+}
+
 .word {
     color: red;
  }
