--- a/master.css
+++ b/master.css
@@ -24,7 +24,7 @@
     position:relative;
     margin-top: -10%;
     background-color: rgb(62,87,128);
-    height: 100%;
+    height: fit-content;
     width: 100%;
     top:80%;
     font-size: 16px;
