--- a/master.css
+++ b/master.css
@@ -45,6 +45,37 @@
 }
 
 
+/* Dialouge Boxes */
+
+/*Before*/
+.talk-box {
+    display: flex;
+    /* justify-content:center; */
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px ;
+    height: fit-content;
+
+}
+/*After*/
+
+.talk-box-read {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    transition: all 1.0s ease;
+    font-size: 30px;
+    height: fit-content;
+}
+
+.talk-box-read img {
+    transition: all 1.0s ease;
+    width:150;
+    height: 150;
+}
+
+
+
 
 .separator {
     background-color: white;
