--- a/style/master.css
+++ b/style/master.css
@@ -14,6 +14,8 @@ p {
     font-size: 20px;
 }
 
+/*TOGGLE SWITCH*/
+
 
 /*CUSTOM WORK CITED ELEMENTS*/
 .wc-element {
@@ -29,6 +31,7 @@ p {
 }
 
 .wc-element:hover {
+   
     border-radius: 50px;
     margin: 10px;
     display: flex;
@@ -37,9 +40,12 @@ p {
     font-size: 25px ;
     height: max-content;
     font-weight: bold;
-
     scroll-margin-bottom: 300px;
     padding: 20px;
+}
+
+.wc-element:hover .dialouge{
+   color: rgb(251, 234, 3);
 }
 
 #wc {
@@ -276,6 +282,7 @@ audio::-webkit-media-controls-panel {
     height: fit-content;
     max-width: 25%;
     padding: 20px;
+    padding-top: 0px;
 
     /* position: relative;
     bottom: 0;
@@ -293,6 +300,8 @@ audio::-webkit-media-controls-panel {
     margin: 10px;
     align-items: center;
 }
+
+
 
 .transcript-box h1{
     font-size: 30px;
@@ -532,3 +541,67 @@ audio::-webkit-media-controls-panel {
     width: 25px;
 
 }
+
+/* TOGGLE SWITCH*/
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
