--- a/style/master.css
+++ b/style/master.css
@@ -9,6 +9,16 @@ h1{
     font-size: 30px;
 }
 
+
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    /* background: linear-gradient(to right,white, #56AEFF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+    color: #56AEFF;
+    font-size: 20px;
+}
+
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
